--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ariclaw</title>
+    <title>Tech & Trade Gambia</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -95,6 +95,7 @@
                             <div class="banner_btn">
                                 <a href="#" class="btn_1">More About Us</a>
                             </div>
+                            <p>site under maintenance</p>
                         </div>
                     </div>
                 </div>
